[package]
name = "event-bus"
version = "0.2.0"
authors = [
        "Connor Jardine <connorjardine97@gmail.com>",
        "Frank Bojen <f.bojen@gmail.com>",
        "Naji Shehab <naji.shehab@hotmail.com>",
        "Patrick Menlove <patrickmenlove@hotmail.co.uk>",
        "David Wood <david@davidtw.co>"
]
description = """
Event Bus Research Prototype for Avaloq
Built by Team SED for the University of Glasgow Level 3 Team Project
"""

[dependencies]
actix = "0.3.5"
bytes = "0.4.5"
chrono = "0.4.0"
clap = "2.27.1"
colored = "1.6.0"
failure = "0.1.1"
fern = "0.4.3"
futures = "0.1.17"
log = "0.3.8"
rdkafka = "0.13.0"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"
sha1 = "0.2.0"
tokio-core = "0.1.11"
tokio-io = "0.1.4"
websocket = "0.20.2"

[dependencies.couchbase]
git = "https://github.com/couchbaselabs/couchbase-rs.git"
branch = "master"
# tag = "0.3.0"

[dependencies.couchbase-sys]
git = "https://github.com/couchbaselabs/couchbase-rs.git"
branch = "master"
# tag = "0.3.0"
# features = ["build-lcb", "generate-binding"]
