[package]
name = "vicarius_common"
version = "0.1.0"
authors = [
        "Connor Jardine <connorjardine97@gmail.com>",
        "Frank Bojen <f.bojen@gmail.com>",
        "Naji Shehab <naji.shehab@hotmail.com>",
        "Patrick Menlove <patrickmenlove@hotmail.co.uk>",
        "David Wood <david@davidtw.co>"
]
description = "Common components for the Vicarius team project for Avaloq"

[dependencies]
colored = "1.6.0"
chrono = "0.4.0"
failure = "0.1.1"
fern = "0.4.3"
log = "0.3.8"
serde = "1.0.19"
serde_derive = "1.0.19"
serde_json = "1.0.5"
