[package]
name = "vicarius_service"
version = "0.1.0"
authors = [
        "Connor Jardine <connorjardine97@gmail.com>",
        "Frank Bojen <f.bojen@gmail.com>",
        "Naji Shehab <naji.shehab@hotmail.com>",
        "Patrick Menlove <patrickmenlove@hotmail.co.uk>",
        "David Wood <david@davidtw.co>"
]
description = "Microservice framework for the Vicarius team project for Avaloq"

[dependencies]
actix = "0.4.5"
actix-web = "0.3.3"
clap = "2.27.1"
failure = "0.1.1"
log = "0.3.8"
serde = "1.0.19"
serde_json = "1.0.5"
rlua = "0.11.0"
vicarius_common = { path = "../common" }
websocket = "0.20.2"
